--- a/prod/index.html
+++ b/prod/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf8">
 	<title>Webpack-personal-template</title>
 	<link type="text/css" rel="stylesheet" href="static/styles/styles.css">
+	<script src="./scripts/scripts.js"></script>
 </head>
 
 <body>
@@ -23,13 +24,16 @@
 					<a href="https://webpack.js.org/" target="_blank" rel="noopener noreferrer">Webpack</a>
 				</li>
 				<li>
-					<a href="https://pugjs.org/api/getting-started.html" target="_blank" rel="noopener noreferrer">Pug</a>
+					<a href="https://pugjs.org/" target="_blank" rel="noopener noreferrer">Pug</a>
 				</li>
 				<li>
 					<a href="http://stylus-lang.com/" target="_blank" rel="noopener noreferrer">Stylus</a>
 				</li>
 				<li>
 					<a href="https://jasmine.github.io/" target="_blank" rel="noopener noreferrer">Jasmine</a>
+				</li>
+				<li>
+					<a href="https://eslint.org/" target="_blank" rel="noopener noreferrer">ES Lint</a>
 				</li>
 			</ul>
 		</section>
