--- a/prod/index.html
+++ b/prod/index.html
@@ -4,8 +4,11 @@
 <head>
 	<meta charset="utf8">
 	<title>Webpack-personal-template</title>
+	<link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon">
+	<meta name="description" content="description">
+	<meta name="keywords" content="keywords">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<link type="text/css" rel="stylesheet" href="static/styles/styles.css">
-	<script src="./scripts/scripts.js"></script>
 </head>
 
 <body>
@@ -38,6 +41,7 @@
 			</ul>
 		</section>
 	</main>
+	<script src="./scripts/scripts.js"></script>
 </body>
 
 </html>
